# block

./: .gitignore
rust-src/: Cargo.toml  aarch64-unknown-linux-gnu_6.5.0.bat  aarch64-unknown-linux-gnu_6.5.0.env  armv7-unknown-linux-gnueabihf_6.5.0.bat  armv7-unknown-linux-gnueabihf_6.5.0.env
rust-src/.cargo/: config.toml
rust-src/apps/: discovery.7z  inspec.7z
rust-src/apps/core-service/: Cargo.toml
rust-src/apps/core-service.unused/: Cargo.toml
rust-src/apps/core-service.unused/src/: main.rs.n  process.rs  service.rs
rust-src/apps/core-service/src/: main.rs  process.rs  service.rs
rust-src/apps/discovery/: Cargo.toml
rust-src/apps/discovery/src/: configures.rs  main.rs  process.rs
rust-src/apps/doodle/: Cargo.toml
rust-src/apps/doodle/src/: main.rs  process.rs
rust-src/apps/gateway/: Cargo.toml
rust-src/apps/gateway/src/: app.rs  http_server copy.rs  http_server.rs  main.rs  p.rs
rust-src/apps/inspec/: Cargo.toml
rust-src/apps/inspec/src/: main.rs
rust-src/apps/runtime/: Cargo.toml
rust-src/apps/runtime/src/: config.rs  daemon.rs  main.rs  runtime_stack.rs
rust-src/common/near-base/: Cargo.toml
rust-src/common/near-base/src/: dynamic_ptr.rs  errors.rs  lib.rs  queue.rs  time.rs  waiter.rs
rust-src/common/near-core/: Cargo.toml
rust-src/common/near-core/src/: config.rs  daemon.rs  lib.rs  path_utils.rs  time_utils.rs
rust-src/common/near-transport/: Cargo.toml
rust-src/common/near-transport/src/: h.rs  lib.rs  stack.rs  stack.rs.unused  stack_tunnel_event.rs
rust-src/common/near-util/: Cargo.toml
rust-src/common/near-util/src/: file_util.rs  lib.rs  read_with_limit.rs  thing_util.rs  type_code.rs  types.rs
rust-src/deploy/lua/: 5EEB593E0968AF0FC01260808EC79ABC.lua  built-inner.lua  vanhai.lua
rust-src/doc/: connect-process-device.md  connect-process-thing.md  需求.md
rust-src/libsrc/base/: Cargo.toml
rust-src/libsrc/base/src/: chunk_v0.rs  file_option_object.rs.unused  lib.rs  message.rs  module.rs  raw_object.rs
rust-src/libsrc/cip39/: Cargo.toml
rust-src/libsrc/cip39/src/: cip39.rs  cip39_p.rs  lib.rs  path.rs  profile.rs  seed.rs  seed_key_bip.rs
rust-src/libsrc/cli-common/: Cargo.toml
rust-src/libsrc/cli-common/src/: api.rs  brand_cb.rs  bridge_generated.io.rs  bridge_generated.rs  cb.rs  desc.rs  lib.rs  lib_for_android.rs  stack.rs  test_brand.rs
rust-src/libsrc/common/: Cargo.toml
rust-src/libsrc/common/src/: action.rs  cmd.rs  config.rs  core_stack.rs  lib.rs  routine_template.rs  runtime_stack.rs
rust-src/libsrc/dataagent-util/: Cargo.toml
rust-src/libsrc/dataagent-util/src/: lib.rs
rust-src/libsrc/discovery-util/: Cargo.toml
rust-src/libsrc/discovery-util/src/: lib.rs
rust-src/libsrc/nds/: Cargo.toml
rust-src/libsrc/nds.230620/: Cargo.toml
rust-src/libsrc/nds.230620/src/: lib.rs  stack.rs  stack_private.rs
rust-src/libsrc/nds/src/: lib.rs  stack.rs  stack_private.rs
rust-src/libsrc/proof/: Cargo.toml
rust-src/libsrc/proof/src/: lib.rs  proof_data.rs  proof_of_device.rs  proof_of_ping.rs
rust-src/libsrc/protos/: Cargo.toml  build.rs  build.rs.cp
rust-src/libsrc/protos/protos/: core_message.proto  profile.proto
rust-src/libsrc/protos/src/: lib.rs
rust-src/libsrc/right/: Cargo.toml
rust-src/libsrc/right/src/: lib.rs  stack.rs
rust-src/libsrc/storage/: Cargo.toml
rust-src/libsrc/storage/src/: lib.rs
rust-src/libsrc/topic-util/: Cargo.toml
rust-src/libsrc/topic-util/src/: brand_topic.rs.unused  hci_topic.rs.unused  lib.rs  topic_types.rs
rust-src/misc/ring-smart/: Cargo.toml
rust-src/misc/ring-smart/src/: lib.rs  main.rs  process.rs
rust-src/misc/sn-smart-e/: Cargo.toml
rust-src/misc/sn-smart-e/src/: lib.rs  main.rs  process.rs
rust-src/service/default-service-e/: Cargo.toml
rust-src/service/default-service-e/src/: lib.rs  main.rs  process.rs
rust-src/service/file-manager/: Cargo.toml
rust-src/service/file-manager-e/: Cargo.toml
rust-src/service/file-manager-e/src/: config.rs  lib.rs  main.rs  module.rs  runtime_stack.rs
rust-src/service/file-manager.o/: Cargo.toml
rust-src/service/file-manager.o/src/: lib.rs  module.rs
rust-src/service/file-manager/src/: lib.rs  module.rs
rust-src/service/gateway-e/: Cargo.toml
rust-src/service/gateway-e/src/: config.rs  lib.rs  main.rs  module.rs  runtime_stack.rs
rust-src/service/gateway-n/: Cargo.toml
rust-src/service/gateway-n/src/: lib.rs  module.rs
rust-src/service/hci-gateway-e/: Cargo.toml
rust-src/service/hci-gateway-e/src/: main.rs  p.rs  process.rs
rust-src/service/hci-manager-e.unused/: Cargo.toml
rust-src/service/hci-manager-e.unused/src/: main.rs  p.rs  process.rs
rust-src/service/hci-schedule-e/: Cargo.toml
rust-src/service/hci-schedule-e/src/: lib.rs  main.rs  process.rs
rust-src/service/hci-service-e/: Cargo.toml
rust-src/service/hci-service-e/src/: lib.rs  main.rs  process.rs
rust-src/service/hci-storage-e/: Cargo.toml
rust-src/service/hci-storage-e/src/: lib.rs  main.rs  process.rs
rust-src/test/bluex-libs/: Cargo.toml
rust-src/test/bluex-libs/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
rust-src/test/test_bluex/: Cargo.toml
rust-src/test/test_bluex/src/: main.rs
rust-src/test/test_caller/: Cargo.toml
rust-src/test/test_caller/src/: main.rs
rust-src/test/test_cast/: Cargo.toml
rust-src/test/test_cast/src/: main.rs
rust-src/test/test_chrono/: Cargo.toml
rust-src/test/test_chrono/src/: main.rs
rust-src/test/test_cpu_id/: Cargo.toml
rust-src/test/test_cpu_id/src/: main.rs
rust-src/test/test_cpu_id_libs/: Cargo.toml
rust-src/test/test_cpu_id_libs/src/: lib.rs
rust-src/test/test_lua/: Cargo.toml  pub.lua  test_lua.lua
rust-src/test/test_lua/src/: configure.rs  main.rs
rust-src/test/test_lua_2/: Cargo.toml  tt.txt
rust-src/test/test_lua_2/src/: main.rs
rust-src/test/test_sqlite/: Cargo.toml
rust-src/test/test_sqlite/src/: main.rs
rust-src/test/test_storage/: Cargo.toml
rust-src/test/test_storage/src/: main.rs
rust-src/test/test_toml/: Cargo.toml
rust-src/tools/desc-tool/: Cargo.toml
(+491 files in other folders)
