[workspace]
resolver = "2"
members = [
    "./3rd-party/bluex",

    "./common/near-base",
    "./common/near-core",
    "./common/near-util",
    "./common/near-transport",

    "./libsrc/protos",
    "./libsrc/base",
    "./libsrc/common",
    "./libsrc/dataagent-util",
    "./libsrc/right",
    "./libsrc/nds",
    "./libsrc/topic-util",
    "./libsrc/storage",
    "./libsrc/proof",
    "./libsrc/discovery-util",
    "./libsrc/cli-common",
    "./libsrc/cip39",

    "./apps/core-service",
    # "./apps/inspec-e",
    "./apps/discovery",
    "./apps/doodle",

    # "./service/gateway-e",
    # "./service/file-manager-e",
    "./service/hci-service-e",
    "./service/hci-gateway-e",
    "./service/hci-schedule-e",
    "./service/hci-storage-e",

    "./misc/ring-smart",
    "./misc/sn-smart-e",

    "./tools/desc-tool",

    "./test/test_bluex",
    "./test/test_lua",
    "./test/test_lua_2",
    "./test/test_sqlite",
    "./test/test_toml",
    "./test/test_storage",
    "./test/test_chrono",
    "./test/test_cast",
    "./test/test_cpu_id",
    "./test/test_cpu_id_libs",
    "./test/test_caller",
    "./test/bluex-libs",
]

[workspace.package]
version = "1.0.1"

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.82"
generic-array = "0.14.7"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
lazy_static = '1.4'
log = { version = "0.4.18", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
libc = "0.2.126"
hex = "0.4"
base58 = "0.2.0"
rand = "0.7.3"
clap = "3.2.20"
once_cell = "1.17.1"
bytes = "1.4.0"
enumflags2 = "0.7"
mac_address = "1.1.5"
winapi = "0.3.9"
toml = "0.8.0"
chrono = "0.4.22"
instant = "0.1.12"
num_cpus = '^1.16'
sha2 = "0.10.8"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

