[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
near-transport = { path = "../../common/near-transport" }

base = { path = "../../libsrc/base" }
common = { path = "../../libsrc/common" }
protos = { path = "../../libsrc/protos" }
topic-util = { path = "../../libsrc/topic-util" }

async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
