[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
near-transport = { path = "../../common/near-transport" }

common = { path = "../../libsrc/common" }
discovery-util = { path = "../../libsrc/discovery-util" }

async-std = { workspace = true }
async-trait = { workspace = true }

log = { workspace = true }
once_cell = { workspace = true }