[package]
name = "doodle"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
near-transport = { path = "../../common/near-transport" }

common = { path = "../../libsrc/common" }

serial = "0.4.0"

async-std = { workspace = true }
async-trait = { workspace = true }

log = { workspace = true }
chrono ={ workspace = true }