
[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
nds = { path = "../../libsrc/nds" }
async-std = { workspace = true }
async-trait = { workspace = true }
tide = "0.16"
serde = "1.0"
serde_json = "1.0"
lazy_static = { workspace = true }
