[package]
name = "near-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../near-base" }

libc = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
c_linked_list = '1.1.1'
backtrace = "0.3.66"
chrono = { workspace = true }
dirs = '4.0'

[target.'cfg(any(target_os="android", target_os="ios"))'.dependencies]
flexi_logger = { version = '0.25.5', features = ["async"] }
log = { workspace = true }

[target.'cfg(any(target_os="windows", target_os="macos", target_os="linux"))'.dependencies]
flexi_logger = { version = '0.25.5', features = ["async"] }
log = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = '0.3.9', features = [
    'psapi',
    'shellapi',
    'mswsock',
    'ws2ipdef',
] }
