[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { workspace = true }

near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
near-transport = { path = "../../common/near-transport" }

async-trait = { workspace = true }
lazy_static = { workspace = true }
