[package]
name = "cip39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
bip39 = { version = "1.0.0", features = ["rand"] }
memzero = '0.1.0'
pbkdf2 = { version = '0.12.2', default-features = false }
hmac = '0.12'
sha2 = '0.10'

rand = { workspace = true }
rand_core = '0.5'
rand_chacha = '0.2'

lazy_static = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
