[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
near-transport = { path = "../../common/near-transport" }

base = { path = "../base" }
protos = { path = "../protos" }
topic-util = { path = "../topic-util" }

async-std = { workspace = true }
async-trait = { workspace = true }

clap = { workspace = true, features = ["cargo"] }
lazy_static = { workspace = true }
once_cell = { workspace = true }
libc = { workspace = true }
winapi = { workspace = true, features = ["errhandlingapi"] }

named-lock = '0.2.0'
fs2 = '0.4'

[target.'cfg(any(target_os="linux", target_os="android", target_os="ios"))'.dependencies]
nix = { version = "0.26.2", features = ["signal"] }
fork = "0.1.22"
