[package]
name = "dataagent-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }

protos = { path = "../protos" }

async-std = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }

protobuf = { version = '=3.2.0', features = ['with-bytes'] }

[target.'cfg(all(target_os="windows", target_env = "gnu"))'.dependencies]
sqlx = { version = "0.6.2", features = [
    "runtime-async-std-rustls",
    "any",
    "sqlite",
] }

[target.'cfg(any(not(target_os="windows"), not(target_env = "gnu")))'.dependencies]
sqlx = { version = "0.6.2", features = [
    "runtime-async-std-rustls",
    "any",
    "sqlite",
] }

