[package]
name = "nds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-transport = { path = "../../common/near-transport" }
near-util = { path = "../../common/near-util" }

base = { path = "../base" }
common = { path = "../common" }
protos = { path = "../protos" }

log = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
generic-array = { workspace = true }
base58 = { workspace = true }
num_cpus = "1.13.1"
once_cell = { workspace = true }

