[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
near-util = { path = "../../common/near-util" }
protobuf-codegen = "3.2.0"
prost-build = "0.11.9"
protobuf = { version = '=3.2.0', features = ['with-bytes'] }

[dependencies]
log = { workspace = true }

# near
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-util = { path = "../../common/near-util" }
# libsrc
base = { path = "../base" }

protobuf = { version = '=3.2.0', features = ['with-bytes'] }
prost = "0.11.4"
prost-reflect = "0.11.4"
bytes = "1.4.0"

lazy_static = { workspace = true }
