[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-base = { path = "../../common/near-base" }

dataagent-util = { path = "../dataagent-util" }
protos = { path = "../protos" }

log = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
