[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-transport = { path = "../../common/near-transport" }
near-util = { path = "../../common/near-util" }
common = { path = "../common" }
protocol = { path = "../protocol" }
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
generic-array = { workspace = true }
base58 = { workspace = true }
num_cpus = "1.13.1"
once_cell = { workspace = true }

[lib]
# 库名， 默认项目名称
# name = "near-base"

# 构建目标
# dylib -> 动态库
# rlib -> r库
# staticlib -> 静态库
crate-type = ["dylib"]
