[package]
name = "gateway-n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-transport = { path = "../../common/near-transport" }
near-util = { path = "../../common/near-util" }
base = { path = "../../libsrc/base" }
nds = { path = "../../libsrc/nds" }
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tide = "0.16"
serde = "1.0"
serde_json = "1.0"
once_cell = { workspace = true }

[lib]
# 库名， 默认项目名称
# name = "gateway-n"

# 构建目标
# dylib -> 动态库
# rlib -> r库
# staticlib -> 静态库
crate-type = ["dylib"]
