[package]
name = "hci-schedule-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

near-base = { path = "../../common/near-base" }
near-core = { path = "../../common/near-core" }
near-transport = { path = "../../common/near-transport" }
near-util = { path = "../../common/near-util" }

base = { path = "../../libsrc/base" }
common = { path = "../../libsrc/common" }
topic-util = { path = "../../libsrc/topic-util" }
protos = { path = "../../libsrc/protos" }

async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mac_address = { workspace = true }
enumflags2 = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }